# Tinder-Server

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile2  README.md  applicationServer.html  config.sh  configEclipse.sh  coverageEnvironmentVariables.sh  coverageReport.sh  coverall.sh  genindex.html  index.html  linksInteres.html  objects.inv  params.json  search.html  searchindex.js  shareServer.html  tickets.html
_sources/: index.txt  linksInteres.txt  tickets.txt
_sources/appserver/: api.txt  musuario.txt
_sources/client/: mtecnico.txt  solucion.txt
_sources/shserver/: mtecnico.txt
_static/: breathe.css
appserver/: api.html  mtecnico.html  musuario.html  solucion.html  tecnologias.html
client/: casos.html  mtecnico.html  musuario.html  solucion.html  tecnologias.html
doc/: Makefile
doc/source/: applicationServer.rst  conf.py  index.rst  linksInteres.rst  shareServer.rst  tickets.rst
doc/source/appserver/: api.rst  mtecnico.rst  musuario.rst  solucion.rst  tecnologias.rst
doc/source/client/: casos.rst  solucion.rst  tecnologias.rst
doc/source/shserver/: musuario.rst  solucion.rst  tecnologias.rst
include/: hello.h
integration/: httpTest.py  user.py
project/: CMakeLists.txt  Doxyfile.in
project/app/: CMakeLists.txt  Doxyfile
project/app/src/api/: ApiConstants.h  AuthResource.cpp  AuthResource.h  CandidateResource.cpp  CandidateResource.h  ChatResource.cpp  ChatResource.h  InterestResource.cpp  InterestResource.h  JsonWebToken.cpp  JsonWebToken.h  LikeResource.cpp  LikeResource.h  LocationResource.cpp  LocationResource.h  MatchResource.cpp  MatchResource.h  SecurityFilter.cpp  SecurityFilter.h  UserResource.cpp  UserResource.h  UserValidator.h
project/app/src/dao/: AuthenticationDAO.cpp  AuthenticationDAO.h  TranslationDAO.cpp  TranslationDAO.h  TranslationException.cpp  TranslationException.h  UserDAO.cpp  UserDAO.h  UserNotFoundException.cpp  UserNotFoundException.h
project/app/src/db/: DBConnector.cpp  DBConnector.h  DBException.cpp  DBException.h
project/app/src/dispatcher/: ApiDispatcher.cpp  ApiDispatcher.h  EndPoint.cpp  EndPoint.h  Filter.h  NoSuchMethodHandlerException.cpp  NoSuchMethodHandlerException.h  ParsingContentException.cpp  ParsingContentException.h  PathVariableException.cpp  PathVariableException.h  PathVariableExtractor.cpp  PathVariableExtractor.h  RestResource.cpp  RestResource.h  SecurityFilter.cpp  SecurityFilter.h  WebContext.cpp  WebContext.h
project/app/src/json/: ParameterReader.h
project/app/src/log/: Logger.cpp  Logger.h
project/app/src/model/: Interest.cpp  Interest.h  Location.cpp  Location.h  Message.cpp  Message.h  User.cpp  User.h  UserFactory.cpp  UserFactory.h
project/app/src/mongoose/: mongoose.h
project/app/src/options/: CorruptOptionsException.cpp  CorruptOptionsException.h  Options.cpp  Options.h  OptionsReader.cpp  OptionsReader.h
project/app/src/services/: ServiceException.cpp  ServiceException.h
project/app/src/services/authentication/: AuthenticationException.cpp  AuthenticationException.h  AuthenticationService.cpp  AuthenticationService.h  JsonWebToken.cpp  JsonWebToken.h
project/app/src/services/chat/: ChatDAO.cpp  ChatDAO.h  ChatException.cpp  ChatException.h  ChatServices.cpp  ChatServices.h
project/app/src/services/match/: Candidate.cpp  Candidate.h  MatchDAO.cpp  MatchDAO.h  MatchServices.cpp  MatchServices.h  NoMoreCandidatesException.cpp  NoMoreCandidatesException.h
project/app/src/services/profile/: ProfileServices.cpp  ProfileServices.h  UserNotFoundException.cpp  UserNotFoundException.h
project/app/src/sharedConnector/: CallBacks.h  ConnectionException.cpp  ConnectionException.h  SharedConnector.cpp  SharedConnector.h
project/app/src/webserver/: Constants.h  RequestDispatcher.h  RestRequest.cpp  RestRequest.h  RestResponse.cpp  RestResponse.h  WebServer.cpp  WebServer.h  WebServerException.cpp  WebServerException.h
project/cmake/: CodeCoverage.cmake
project/server/: CMakeLists.txt  config.json  main.cpp
project/src/: CMakeLists.txt  main.cpp
project/src/app/dispatcher/: ApiDispatcher.cpp  EndPoint.cpp  EndPoint.h  RestController.cpp  RestController.h
project/src/app/log/: Logger.cpp
project/src/app/webserver/: WebServer.cpp  WebServer.h
project/src/db/: DBConnector.cpp  DBConnector.h
project/src/dispatcher/: ApiDispatcher.cpp  ApiDispatcher.h  EndPoint.cpp  EndPoint.h  PathVariableExtractor.cpp  PathVariableExtractor.h  RestController.cpp
project/src/log/: Logger.cpp  Logger.h
project/src/webserver/: WebServer.cpp  WebServer.h
project/test/: CMakeLists.txt  test.cpp
project/test/applib/: CMakeLists.txt
project/test/applib/dao/: UserDAOTest.cpp  UserDAOTest.h
project/test/applib/db/: DBConnectorTest.cpp  DBConnectorTest.h
project/test/applib/dispatcher/: ApiDispatcherTest.cpp  ApiDispatcherTest.h  EndPointTest.cpp  EndPointTest.h  PathVariableExtractorTest.cpp  PathVariableExtractorTest.h  VoidCallerMock.cpp  VoidCallerMock.h  WebContextTest.cpp  WebContextTest.h
project/test/applib/model/: InterestTest.cpp  InterestTest.h  UserFactoryTest.cpp  UserFactoryTest.h  UserTest.cpp  UserTest.h
project/test/applib/services/: ServiceTestHelper.cpp  ServiceTestHelper.h
project/test/applib/services/authentication/: AuthenticationServiceTest.cpp  AuthenticationServiceTest.h  JsonWebTokenTest.cpp  JsonWebTokenTest.h
project/test/applib/services/chat/: ChatDAOTest.cpp  ChatDAOTest.h  ChatServicesTest.cpp  ChatServicesTest.h
project/test/applib/services/match/: CandidateTest.cpp  CandidateTest.h  MatchDAOTest.cpp  MatchDAOTest.h  MatchServicesTest.cpp  MatchServicesTest.h
project/test/applib/services/profile/: ProfileServicesTest.cpp  ProfileServicesTest.h
shserver/: mtecnico.html  musuario.html  solucion.html  tecnologias.html
src/: hello.cpp  main.cpp
